<resources>
    <string name="roomkit_input_can_not_empty">input can\'t be empty!</string>
    <string name="roomkit_create_room">Create room</string>
    <string name="roomkit_enter_room_id">Enter roomID</string>
    <string name="roomkit_room_type_freedom_speaker">Freedom speaker room</string>
    <string name="roomkit_join_room">Join room</string>
    <string name="roomkit_room_type_stage_speaker">On-stage speaking room</string>
    <string name="roomkit_room_id">Room ID</string>
    <string name="roomkit_room_type">Room type</string>
    <string name="roomkit_start_video">Start video</string>
    <string name="roomkit_stop_video">Stop video</string>
    <string name="roomkit_your_name">Your name</string>
    <string name="roomkit_enable_speaker">Enable speaker</string>
    <string name="roomkit_enable_audio">Enable audio</string>
    <string name="roomkit_enable_video">Enable video</string>
    <string name="roomkit_mute">Mute</string>
    <string name="roomkit_unmute">Unmute</string>
    <string name="roomkit_end">End</string>
    <string name="roomkit_member_count">Members(%s)</string>
    <string name="roomkit_expand">Expansion</string>
    <string name="roomkit_user_room">%s\'s room</string>
    <string name="roomkit_screen_share">Screen share</string>
    <string name="roomkit_mute_all_audio">Mute all</string>
    <string name="roomkit_unmute_all_audio">Unmute all</string>
    <string name="roomkit_more">More</string>
    <string name="roomkit_search_members">Search members</string>
    <string name="roomkit_invite">Invite</string>
    <string name="roomkit_role_owner">Owner</string>
    <string name="roomkit_role_admin">Administrator</string>
    <string name="roomkit_me">Me</string>
    <string name="roomkit_room_link">Room link</string>
    <string name="roomkit_copy">Copy</string>
    <string name="roomkit_copy_room_info">Copy room info</string>
    <string name="roomkit_msg_all_members_will_be_muted">All current and incoming members will be muted</string>
    <string name="roomkit_msg_all_members_video_disabled">All current and incoming members will be restricted from video</string>
    <string name="roomkit_msg_members_cannot_unmute">Members will unable to turn on the microphone</string>
    <string name="roomkit_msg_members_cannot_start_video">Members will unable to turn on video</string>
    <string name="roomkit_confirm">Confirm</string>
    <string name="roomkit_cancel">Cancel</string>
    <string name="roomkit_disable_all_video">Stop all video</string>
    <string name="roomkit_enable_all_video">Enable all video</string>
    <string name="roomkit_msg_all_members_will_be_unmuted">All members will be unmuted</string>
    <string name="roomkit_msg_members_can_unmute">Members will be able to turn on the microphone</string>
    <string name="roomkit_confirm_release">Confirm release</string>
    <string name="roomkit_msg_all_members_video_enabled">All members will not be restricted from video</string>
    <string name="roomkit_msg_members_can_start_video">Members will be able to turn on video</string>
    <string name="roomkit_toast_all_video_disabled">All videos disabled</string>
    <string name="roomkit_toast_all_video_enabled">All videos enabled</string>
    <string name="roomkit_toast_all_audio_disabled">All audios disabled</string>
    <string name="roomkit_toast_all_audio_enabled">All audios enabled</string>
    <string name="roomkit_modify_name">Modify the name</string>
    <string name="roomkit_request_unmute_audio">Ask to unmute</string>
    <string name="roomkit_request_start_video">Ask to start video</string>
    <string name="roomkit_transfer_owner">Make host</string>
    <string name="roomkit_set_admin">Set as administrator</string>
    <string name="roomkit_revoke_admin">Undo administrator</string>
    <string name="roomkit_mute_text_chat">Mute message</string>
    <string name="roomkit_unmute_text_chat">Unmute message</string>
    <string name="roomkit_remove_member">Remove</string>
    <string name="roomkit_msg_transfer_owner_to">Transfer the host to %s</string>
    <string name="roomkit_msg_transfer_owner_tip">After transfer the host you will become a general user</string>
    <string name="roomkit_confirm_transfer">Confirm transfer</string>
    <string name="roomkit_toast_you_are_owner">You are now a host</string>
    <string name="roomkit_toast_owner_transferred">The host has been transferred to %s</string>
    <string name="roomkit_toast_you_are_admin">You have become a conference admin</string>
    <string name="roomkit_toast_admin_set">%s has been set as conference admin</string>
    <string name="roomkit_toast_admin_revoked">The conference admin status of %s has been withdrawn</string>
    <string name="roomkit_toast_you_are_no_longer_admin">Your conference admin status has been revoked</string>
    <string name="roomkit_toast_room_id_copied">Room ID copied</string>
    <string name="roomkit_toast_room_link_copied">Room link copied</string>
    <string name="roomkit_toast_room_info_copied">Room information copied successfully</string>
    <string name="roomkit_leave_room">Leave room</string>
    <string name="roomkit_end_room">End room</string>
    <string name="roomkit_toast_room_ended">Room ended</string>
    <string name="roomkit_confirm_leave_room_by_genera_user">Are you sure you want to leave the room</string>
    <string name="roomkit_confirm_leave_room_by_owner">If you don\'t want to end the conference, \n please assign a new host before leaving the conference</string>
    <string name="roomkit_confirm_remove_member">Do you want to move %s out of the room?</string>
    <string name="roomkit_ok">OK</string>
    <string name="roomkit_toast_room_closed">The room was closed.</string>
    <string name="roomkit_toast_you_were_removed">You were removed by the host.</string>
    <string name="roomkit_toast_audio_invite_sent">The audience has been invited to open the audio</string>
    <string name="roomkit_toast_video_invite_sent">The audience has been invited to open the video</string>
    <string name="roomkit_toast_text_chat_disabled">You have been banned from text chat</string>
    <string name="roomkit_toast_text_chat_enabled">You are allowed to text chat</string>
    <string name="roomkit_msg_invite_unmute_audio">%s invites you to turn on the microphone</string>
    <string name="roomkit_msg_invite_start_video">%s invites you to turn on the camera</string>
    <string name="roomkit_agree">Agree</string>
    <string name="roomkit_reject">Reject</string>
    <string name="roomkit_toast_camera_closed_by_host">You were closed camera by the host.</string>
    <string name="roomkit_toast_muted_by_host">You were muted by the host.</string>
    <string name="roomkit_enter_nickname">Enter nickname</string>
    <string name="roomkit_tip_all_muted_cannot_unmute">All on mute audio unable to turn on microphone</string>
    <string name="roomkit_tip_all_video_off_cannot_start">All on mute video unable to turn on camera</string>
    <string name="roomkit_room_name">Room name</string>
    <string name="roomkit_err_0_success">Operation successful</string>
    <string name="roomkit_err_general">Temporarily unclassified general error</string>
    <string name="roomkit_err_n2_request_rate_limited">Request rate limited, please try again later</string>
    <string name="roomkit_err_7008_request_rate_limited">Request rate limited, please try again later</string>
    <string name="roomkit_err_10017_muted_in_room">You have been muted in the current room</string>
    <string name="roomkit_err_7015_sensitive_words">Sensitive words are detected, please modify it and try again</string>
    <string name="roomkit_err_9522_content_too_long">The content is too long, please reduce the content and try again</string>
    <string name="roomkit_err_network_error">The network is abnormal, please try again later</string>
    <string name="roomkit_err_n3_repeat_operation">Repeat operation</string>
    <string name="roomkit_err_n4_roomID_not_match">Room ID does not match, please check if you have checked out or changed rooms.</string>
    <string name="roomkit_err_n1000_sdk_appid_not_found">Not found sdkappid, please confirm application info in trtc console</string>
    <string name="roomkit_err_n1001_invalid_parameter">Passing illegal parameters when calling api, check if the parameters are legal</string>
    <string name="roomkit_err_n1002_not_logged_in">Not logged in, please call login api</string>
    <string name="roomkit_err_n1003_permission_denied">Failed to obtain permission, unauthorized audio/video permission, please check if device permission is enabled</string>
    <string name="roomkit_err_n1004_package_required">This feature requires an additional package. please activate the corresponding package as needed in the trtc console</string>
    <string name="roomkit_err_n1005_invalid_license">License is invalid or expired, please check its validity period in the trtc console. please activate the corresponding package as needed in the trtc console.</string>
    <string name="roomkit_err_n1100_camera_open_failed">System issue, failed to open camera. check if camera device is normal</string>
    <string name="roomkit_err_n1101_camera_no_permission">Camera has no system authorization, check system authorization</string>
    <string name="roomkit_err_n1102_camera_occupied">Camera is occupied, check if other process is using camera</string>
    <string name="roomkit_err_n1103_camera_not_found">No camera device currently, please insert camera device to solve the problem</string>
    <string name="roomkit_err_n1104_mic_open_failed">System issue, failed to open mic. check if mic device is normal</string>
    <string name="roomkit_err_n1105_mic_no_permission">Mic has no system authorization, check system authorization</string>
    <string name="roomkit_err_n1106_mic_occupied">Mic is occupied</string>
    <string name="roomkit_err_n1107_mic_not_found">No mic device currently</string>
    <string name="roomkit_err_n1108_screen_share_get_source_failed">Failed to get screen sharing source (screen and window), check screen recording permissions</string>
    <string name="roomkit_err_n1109_screen_share_start_failed">Failed to enable screen sharing, check if someone is already screen sharing in the room</string>
    <string name="roomkit_err_n2101_not_in_room">This feature can only be used after entering the room</string>
    <string name="roomkit_err_n2102_owner_cannot_leave">Room owner does not support leaving the room, room owner can only close the room</string>
    <string name="roomkit_err_n2103_unsupported_in_room_type">This operation is not supported in the current room type</string>
    <string name="roomkit_err_n2105_invalid_room_id">Illegal custom room id, must be printable ascii characters (0x20–0x7e), up to 48 bytes long</string>
    <string name="roomkit_err_n2107_invalid_room_name">Illegal room name, maximum 30 bytes, must be utf-8 encoding if contains chinese characters</string>
    <string name="roomkit_err_n2108_user_already_in_other_room">User is already in another room, single roomengine instance only supports user entering one room, to enter different room, please leave the room or use new roomengine instance</string>
    <string name="roomkit_err_n2200_user_not_exist">User is not exist</string>
    <string name="roomkit_err_n2300_need_owner_permission">Room owner permission required for operation</string>
    <string name="roomkit_err_n2301_need_admin_permission">Room owner or administrator permission required for operation</string>
    <string name="roomkit_err_n2310_signal_no_permission">No permission for signaling request, e.g. canceling an invite not initiated by yourself</string>
    <string name="roomkit_err_n2311_signal_invalid_request_id">Signaling request id is invalid or has been processed</string>
    <string name="roomkit_err_n2312_signal_request_duplicated">Signal request repetition</string>
</resources>