<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/roomkit_bg_bottom_sheet_dialog"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="50dp">

    <TextView
        android:id="@+id/tv_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/roomkit_color_white"
        android:textSize="18sp"
        tools:text="room" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/roomkit_role_owner"
            android:textColor="@color/roomkit_color_room_info_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_room_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/roomkit_color_white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/roomkit_room_id"
            android:textColor="@color/roomkit_color_room_info_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_room_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/roomkit_color_white"
            android:textSize="14sp"
            tools:text="527336" />

        <LinearLayout
            android:id="@+id/btn_copy_room_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roomkit_bg_copy_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/roomkit_ic_copy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/roomkit_copy"
                android:textColor="@color/roomkit_color_text_grey"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_copy_invitation_link"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/roomkit_bg_button_grey"
        android:gravity="center"
        android:text="@string/roomkit_copy_room_info"
        android:textAllCaps="false"
        android:textColor="@color/roomkit_color_white"
        android:textSize="16sp" />

</LinearLayout>
