<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/roomkit_color_background">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerVertical="true"
                android:background="@drawable/roomkit_ic_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iv_back"
                android:text="@string/roomkit_create_room"
                android:textColor="@color/roomkit_color_text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="104dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roomkit_bg_card"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/roomkit_color_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/roomkit_your_name"
                            android:textColor="@color/roomkit_color_text_secondary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_your_name"
                            android:ellipsize="end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="21dp"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:textColor="@color/roomkit_color_text_primary"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roomkit_bg_card"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <LinearLayout
                        android:id="@+id/ll_audio"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/roomkit_enable_audio"
                            android:textColor="@color/roomkit_color_text_secondary"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv_audio_switch"
                            android:layout_width="42dp"
                            android:layout_height="24dp"
                            android:src="@drawable/roomkit_ic_switch_on"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/roomkit_color_background" />

                    <LinearLayout
                        android:id="@+id/ll_speaker"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/roomkit_enable_speaker"
                            android:textColor="@color/roomkit_color_text_secondary"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv_speaker_switch"
                            android:layout_width="42dp"
                            android:layout_height="24dp"
                            android:src="@drawable/roomkit_ic_switch_on" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/roomkit_color_background" />

                    <LinearLayout
                        android:id="@+id/ll_video"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/roomkit_enable_video"
                            android:textColor="@color/roomkit_color_text_secondary"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv_video_switch"
                            android:layout_width="42dp"
                            android:layout_height="24dp"
                            android:importantForAccessibility="no"
                            android:src="@drawable/roomkit_ic_switch_on" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="87dp"
            android:paddingBottom="34dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_room"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/roomkit_bg_button_primary"
                android:gravity="center"
                android:text="@string/roomkit_create_room"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>
